ci: Allow nightly jobs to fail
Nightly jobs test Gitaly against the `master` and `next` branches in
Git. These aren't used in production, so failures shouldn't block Gitlay
deployments.

Promote `allow_failure: true` to the root of the job definition.
Explicitly set `allow_failure: false` when the job is run as part of a
scheduled pipeline.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -299,6 +299,7 @@ test:reftable:
 
 test:nightly:
   <<: *test_definition
+  allow_failure: true
   variables:
     <<: *test_variables
     OVERRIDE_GIT_VERSION: ""
@@ -308,8 +309,8 @@ test:nightly:
         TEST_TARGET: [ test, test-with-praefect ]
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      allow_failure: false
     - when: manual
-      allow_failure: true
 
 test:praefect_smoke:
   <<: *test_definition
