--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -326,6 +326,7 @@ test:fips:
   variables:
     <<: *test_variables
     CACHE_PREFIX: ubi-${UBI_VERSION}
+    TEST_OPTIONS: "-count=1 -timeout=30m" # https://gitlab.com/gitlab-org/gitaly/-/issues/6296
   before_script:
     - *test_before_script
     - dnf install -y python3
