ci: Fix permission denial issue if cache is missing
In the prior version, _build and artifacts such as binaries belong to
the 9999 user ID. However, all files and directories inside GOCACHE
and GOMODCACHE belong to root user. In test:* jobs, the test target run
unprivileged. They still have access to such files, but don't have
write access. So, if go mod artifacts are not available (cache misses
for example), test jobs won't be able to fulfill them due to
permission denial.

That's not a problem if the cache is re-used so that test jobs don't
need to re-run go mod *. It's a bit odd because the cache is supposed
to speed up tests, not to correct the permission issue.

In this version, we create the _build directory, run the
`go mod download` then chown to change the owner of the whole directory
tree to 9999. This fixes the mentioned permission issue. Now the tests
run successfully without depending on cache availability.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,7 +132,9 @@ workflow:
     # Create the build directory for the unprivileged user that we're running
     # tests as. This is required because the source directory itself is owned
     # by `root`.
-    - install --directory --owner=${TEST_UID} --group=${TEST_UID} _build
+    - mkdir -p _build
+    - go mod download -modcacherw
+    - chown -R ${TEST_UID}:${TEST_UID} _build
     # But the actual tests should run unprivileged. This assures that we pay
     # proper attention to permission bits and that we don't modify the source
     # directory.
@@ -206,7 +208,9 @@ build:
     - go version
     # Build the binaries as unprivileged user so that we can reuse the cache
     # for our "test" targets, which also run unprivileged.
-    - install --directory --owner=${TEST_UID} --group=${TEST_UID} _build
+    - mkdir -p _build
+    - go mod download -modcacherw
+    - chown -R ${TEST_UID}:${TEST_UID} _build
     - setpriv --reuid=${TEST_UID} --regid=${TEST_UID} --clear-groups --no-new-privs make build $(test "${GIT_VERSION}" = default && echo build-bundled-git || echo build-git)
     - go run ./tools/test-boot ${TEST_BOOT_ARGS}
   parallel:
