ci: Add Go 1.23 to the test matrix
Go 1.23 was released (https://tip.golang.org/doc/go1.23). This version
adds many nice perks, which are useful to Gitaly.

The testing version was added to the build images:
https://gitlab.com/gitlab-org/gitlab-build-images/-/merge_requests/844

It's worth noted that the minimum Git version of the image was bumped
to 2.45. This version aligns with our minimum supported Git version.
https://gitlab.com/gitlab-org/gitlab-build-images/-/merge_requests/835

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
   - qa
 
 default:
-  image: registry.gitlab.com/gitlab-org/gitlab-build-images/debian-${DEBIAN_VERSION}-golang-${GO_VERSION}-rust-${RUST_VERSION}:git-2.36
+  image: registry.gitlab.com/gitlab-org/gitlab-build-images/debian-${DEBIAN_VERSION}-golang-${GO_VERSION}-rust-${RUST_VERSION}:git-2.45
   tags:
     - saas-linux-large-amd64
   interruptible: true
@@ -16,7 +16,7 @@ default:
   git_default: "default"
   git_minimum: "v2.45.0"
   go_default: "1.22"
-  go_supported: [ "1.21", "1.22" ]
+  go_supported: ["1.21", "1.22", "1.23"]
   macos: "macos-12-xcode-14"
   pgbouncer: "1.17.0"
   postgres_default: "12-alpine"
@@ -333,7 +333,7 @@ test:sha256:
 
 test:fips:
   <<: *test_definition
-  image: registry.gitlab.com/gitlab-org/gitlab-build-images/ubi-${UBI_VERSION}-golang-${GO_VERSION}-rust-${RUST_VERSION}:git-2.36
+  image: registry.gitlab.com/gitlab-org/gitlab-build-images/ubi-${UBI_VERSION}-golang-${GO_VERSION}-rust-${RUST_VERSION}:git-2.45
   tags:
     - fips
   cache:
