--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -293,8 +293,7 @@ test:reftable:
   variables:
     <<: *test_variables
     GITALY_TEST_ENABLE_SYMREF_UPDATE: "true"
-    OVERRIDE_GIT_VERSION: "v99.99.99"
-    GIT_VERSION: "master"
+    GIT_VERSION: "v2.46.0"
     TEST_TARGET: test-with-reftable
 
 test:nightly:
