go: Bump Go's minimum version to v1.22
Go v1.23 was released. We added some more jobs that run the test suite
on this version. This commit bumps the minimum Golang version to v1.22
from v1.21.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ default:
   git_default: "default"
   git_minimum: "v2.45.0"
   go_default: "1.22"
-  go_supported: ["1.21", "1.22", "1.23"]
+  go_supported: ["1.22", "1.23"]
   macos: "macos-12-xcode-14"
   pgbouncer: "1.17.0"
   postgres_default: "12-alpine"
