--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,7 +106,7 @@ workflow:
   services:
     - name: postgres:${POSTGRES_VERSION}
       alias: postgres
-      command: ["postgres", "-c", "max_connections=500"]
+      command: ["postgres", "-c", "max_connections=800", "-c", "shared_buffers=256MB"]
   variables: &test_variables
     PGHOST: postgres
     PGPORT: 5432
@@ -267,7 +267,7 @@ test:pgbouncer:
   services:
     - name: postgres:${POSTGRES_VERSION}
       alias: postgres
-      command: ["postgres", "-c", "max_connections=500"]
+      command: ["postgres", "-c", "max_connections=500", "-c", "shared_buffers=256MB"]
     - name: bitnami/pgbouncer:${PGBOUNCER_VERSION}
       alias: pgbouncer
   variables:
