ci: Upgrade macOS runner to the large variant
Running the new pipeline visualiser tool on a recent Gitaly pipeline
reveals that the slow-running macOS job blocks the tail end of the
pipeline: https://pipeline-visualizer-gitlab-org-quality-engineeri-bcf92e4999c4df.gitlab.io/gitlab-org/gitaly/pipeline/1448163036

Upgrade the runner to the large variant defined here:
https://gitlab.com/gitlab-com/gl-infra/chef-repo/-/blob/325523dc042aba9394e5340064e167ad01d037f7/roles/runners-manager-saas-macos-large-m2pro.json

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -362,7 +362,7 @@ test:fips:
 test:macos:
   image: !reference [.versions, macos]
   tags:
-    - saas-macos-medium-m1
+    - saas-macos-large-m2pro
   needs: []
   stage: test
   cache:
