ci: Disable Homebrew auto cleanup
Homebrew seems to spend a significant amount of time cleaning up old
packages. Disable this from happening by setting the appropriate env
vars.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -380,6 +380,9 @@ test:macos:
     TEST_TMP_DIR: /Volumes/RAMDisk
     # Disable code coverage generation as it is too slow on macOS.
     TEST_WITH_COVERAGE: ""
+    # Homebrew tries to clean up old packages during installation of new packages. The
+    # runner is ephemeral so we don't need this.
+    HOMEBREW_NO_INSTALL_CLEANUP: 1
   before_script:
     # Disable Gatekeeper to speed up spawning executables.
     - sudo spctl --master-disable
