ci: Upgrade Linux tests to a larger runner
The 2xlarge-amd64 runners have 32 cores which our concurrent tests can
fully utilise:
https://docs.gitlab.com/ee/ci/runners/hosted_runners/linux.html#machine-types-available-for-linux---x86-64

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,6 +101,8 @@ workflow:
 .test_template: &test_definition
   needs: []
   stage: test
+  tags:
+    - saas-linux-2xlarge-amd64
   cache:
     - *cache_deps_configuration
     - *cache_go_configuration
