golangci: Add more linters
Let's add some linters for patterns which we already follow:
1. importas: Enforces consistent import aliases
2. spancheck: Checks for mistakes with OpenTelemetry/Census spans

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,6 +28,7 @@ linters:
     - gofmt
     - gofumpt
     - goimports
+    - importas
     - makezero
     - misspell
     - noctx
@@ -35,6 +36,7 @@ linters:
     - paralleltest
     - revive
     - rowserrcheck
+    - spancheck
     - sqlclosecheck
     - stylecheck
     - tenv
