--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -256,7 +256,7 @@ test:
       - GO_VERSION: !reference [.versions, go_supported]
         TEST_TARGET: test
       - TEST_TARGET:
-          [test-with-praefect, race-go, test-wal, test-with-praefect-wal]
+          [test-with-praefect, race-go, test-wal, test-raft, test-with-praefect-wal]
       # We also verify that things work as expected with a non-bundled Git
       # version matching our minimum required Git version.
       - TEST_TARGET: test
@@ -312,7 +312,7 @@ test:nightly:
   parallel:
     matrix:
       - GIT_VERSION: ["master", "next"]
-        TEST_TARGET: [test, test-with-praefect]
+        TEST_TARGET: [test, test-with-praefect, test-wal, test-raft]
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
       allow_failure: false
@@ -331,7 +331,7 @@ test:sha256:
   parallel:
     matrix:
       - TEST_TARGET:
-          [test, test-with-praefect, test-wal, test-with-praefect-wal]
+          [test, test-with-praefect, test-wal, test-raft, test-with-praefect-wal]
         TEST_WITH_SHA256: "YesPlease"
 
 test:fips:
@@ -354,7 +354,7 @@ test:fips:
     - test "$(cat /proc/sys/crypto/fips_enabled)" = "1" || (echo "System is not running in FIPS mode" && exit 1)
   parallel:
     matrix:
-      - TEST_TARGET: [test, test-with-praefect]
+      - TEST_TARGET: [test, test-with-praefect, test-wal, test-raft]
         FIPS_MODE: "YesPlease"
         GO_VERSION: !reference [.versions, go_supported]
   rules:
